--- a/ProtoRabbit/AppShell.xaml
+++ b/ProtoRabbit/AppShell.xaml
@@ -4,12 +4,12 @@
     x:Class="ProtoRabbit.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:pages="clr-namespace:ProtoRabbit.Pages"
+    xmlns:views="clr-namespace:ProtoRabbit.Views"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate pages:MainPage}"
+        ContentTemplate="{DataTemplate views:MainPage}"
         Route="MainPage" />
 
 </Shell>
