--- a/ProtoRabbit/Views/Components/SubscriptionsManager.xaml
+++ b/ProtoRabbit/Views/Components/SubscriptionsManager.xaml
@@ -3,8 +3,8 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:services="clr-namespace:ProtoRabbit.Services"
-             xmlns:components="clr-namespace:ProtoRabbit.Pages.Components"
-             x:Class="ProtoRabbit.Pages.Components.SubscriptionsManager"
+             xmlns:components="clr-namespace:ProtoRabbit.Views.Components"
+             x:Class="ProtoRabbit.Views.Components.SubscriptionsManager"
              x:DataType="components:SubscriptionsManager">
 
     <ContentView.Resources>
