--- a/ProtoRabbit/Views/MainPage.xaml
+++ b/ProtoRabbit/Views/MainPage.xaml
@@ -4,9 +4,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:ProtoRabbit.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             xmlns:components="clr-namespace:ProtoRabbit.Pages.Components"
+             xmlns:components="clr-namespace:ProtoRabbit.Views.Components"
              x:DataType="viewmodel:MainPageViewModel"
-             x:Class="ProtoRabbit.Pages.MainPage"
+             x:Class="ProtoRabbit.Views.MainPage"
              Shell.NavBarIsVisible="False">
 
     <ContentPage.Resources>
