--- a/ProtoRabbit/Views/SubscriptionEditorPage.xaml
+++ b/ProtoRabbit/Views/SubscriptionEditorPage.xaml
@@ -7,7 +7,7 @@
              x:DataType="viewmodel:SubscriptionEditorViewModel"
              x:Class="ProtoRabbit.Views.SubscriptionEditorPage"
              Shell.PresentationMode="Animated"
-             Title="">
+             Title="New Subscription">
     
     <VerticalStackLayout HorizontalOptions="Center"
                          VerticalOptions="Center"
