--- a/ProtoRabbit/Views/MainPage.xaml
+++ b/ProtoRabbit/Views/MainPage.xaml
@@ -199,6 +199,7 @@
                                          Grid.ColumnSpan="3"
                                          Subscriptions="{Binding Subscriptions}"
                                          CurrentSubscription="{Binding CurrentSubscription, Mode=TwoWay}"
+                                         StopSubscriptionCommand="{Binding StopSubscriptionCommand}"
                                          SelectedSubscriptionChangedCommand="{Binding SelectedSubscriptionChangedCommand}"
                                          OpenSubscriptionEditorCommand="{Binding OpenSubscriptionEditorCommand}"
                                          CurrentSubscriptionMessages="{Binding CurrentSubscriptionMessages}" />
