--- a/ProtoRabbit/Views/NewSubscriptionPage.xaml
+++ b/ProtoRabbit/Views/NewSubscriptionPage.xaml
@@ -4,8 +4,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewmodel="clr-namespace:ProtoRabbit.ViewModels"
-             x:DataType="viewmodel:SubscriptionEditorViewModel"
-             x:Class="ProtoRabbit.Views.SubscriptionEditorPage"
+             x:DataType="viewmodel:NewSubscriptionViewModel"
+             x:Class="ProtoRabbit.Views.NewSubscriptionPage"
              Shell.PresentationMode="Animated"
              Title="New Subscription">
     
